oxiplate/tests/broken/escaping/default-escaper-group-missing.stderr
error: No escaper group named `escaper_that_does_not_exist` was found. Available: html, json, md, your_group
 --> tests/broken/escaping/default-escaper-group-missing.rs:4:45
  |
4 | #[oxiplate_inline("{% default_escaper_group escaper_that_does_not_exist %}{{ title }}{{ text: title }}")]
  |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Some writ tokens were not generated due to an error setting the default escaper group.
 --> tests/broken/escaping/default-escaper-group-missing.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
